Login Form Update

--- a/html/Login.html
+++ b/html/Login.html
@@ -44,18 +44,81 @@
                <!-- Login Form -->
                <div class="login form-peice switched">
                   <form class="login-form" action="#">
-                     <div class="form-group">
-                        <input type="email" placeholder="Emial address" name="loginemail" id="loginemail" required>
+
+                     <div class="row">
+                        <div class="">
+                           <div class="wizard card-lik">
+
+                              <form action="#">
+
+                                 <div class="wizard-headr">
+                                    <div class="row">
+                                       <div class="col-xs-12">
+                                          <div class="stps text-center">
+                                             <div class="wizard-stp activ"><i class="fa fa-user"></i></div>
+                                             <div class="wizard-stp"><i class="fa fa-paper-plane"
+                                                   aria-hidden="true"></i></div>
+                                             <div class="wizard-stp"><i class="fa fa-microphone" aria-hidden="true"></i>
+                                             </div>
+                                             <hr />
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </div>
+
+                                 <div class="wizard-bdy">
+
+                                    <div class="stp initl activ">
+
+                                          <!-- login step 1 code here -->
+
+                                    </div>
+
+                                    <div class="stp">
+
+                                        <!-- login step 2 code here -->
+
+                                    </div>
+
+                                    <div class="stp">
+                                      
+                                        <!-- login step 3 code here -->
+
+                                    </div>
+
+                                 </div>
+
+                                 <div class="wizard-footer">
+                                    <div class="row">
+                                       <div class="col-xs-6 pull-left block-center">
+                                          <button id="wizard-pre" style="display:none" type="button"
+                                             class="btn btn-irv btn-irv-default">
+                                             Previous
+                                          </button>
+                                       </div>
+                                       <div class="col-xs-6 pull-right text-center">
+                                          <button id="wizard-nxt" type="button" class="btn btn-irv">
+                                             Next
+                                          </button>
+
+                                       </div>
+                                       <div class="col-xs-6 pull-right block-center">
+                                          <button id="wizard-sub" style="display:none" type="button"
+                                             class="btn btn-irv">
+                                             Submit
+                                          </button>
+                                       </div>
+                                       <div class="CTA my-2 mx-4">
+                                          <a href="#" class="switch">I'm new here</a>
+                                       </div>
+                                    </div>
+                                 </div>
+
+                              </form>
+                           </div>
+                        </div>
                      </div>
 
-                     <div class="form-group">
-                        <input type="password" placeholder="Password" name="loginPassword" id="loginPassword" required>
-                     </div>
-
-                     <div class="CTA">
-                        <input type="submit" value="Login">
-                        <a href="#" class="switch">I'm New</a>
-                     </div>
                   </form>
                </div><!-- End Login Form -->
 
@@ -226,9 +289,6 @@
       </section>
 
    </div>
-
-
-
 
    <!-- FOnt Awesome -->
    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
